# kinect_face_recognition

./: CMakeLists.txt  setup.sh
share/: CMakeLists.txt
share/vision_geometry/: CMakeLists.txt
share/vision_geometry/include/vision_geometry/: CameraIntrinsics.h  LinearAlgebraShortcuts.h
share/vision_geometry/src/: CVUtil.cc  HomographyShortcuts.cc  LinearAlgebraShortcuts.cc  TransformShortcuts.cc
src/: CMakeLists.txt  README.md
src/applications/: CMakeLists.txt
src/applications/aprilTagSnapper/: CMakeLists.txt  aprilTagSnapper.cpp
src/applications/calibrator/: BAProblem.cpp  BAProblem.h  CMakeLists.txt  CalibrationInput.h  ReprojectionCostFunctor.h  calibrator-test.cpp  calibrator.cpp  estimation.cpp  estimation.h
src/applications/multikinect/: CMakeLists.txt  multikinect.cpp
src/applications/quickVideoRecorder/: CMakeLists.txt  quickVideoRecorder.cpp
src/applications/singleKinectTest/: CMakeLists.txt  SKPFaceDetector.cpp  SKPFaceDetector.h  person_find.py
src/applications/threadPoolTest/: CMakeLists.txt  threadPoolTest.cpp
src/libkinectwrapper/: AsyncMKPRSplitter.cpp  AsyncMKPRecipient.cpp  CMakeLists.txt  Calibration.cpp  DepthViewer.cpp  KFRDisplay.cpp  KinectPacket.cpp  KinectWrapperLive.cpp  KinectWrapperPlayback.cpp  MKConfig.cpp  MKPComputeGoal.cpp  MKPPersonTracker.cpp  MKPPool.cpp  MKPRAprilTag.cpp  MKPRCornerDisplay.cpp  MKPRMergeBodyTracks.cpp  MKPRRecord.cpp  MKPRSaveFrame.cpp  MKPRSplitter.cpp  MultiKinectPacket.cpp  MultiKinectWrapper.cpp  Stopwatch.cpp  ThreadPool.cpp
src/libkinectwrapper/include/: AsyncMKPRSplitter.h  AsyncMKPRecipient.h  DepthViewer.h  KFRDisplay.h  KinectPacket.h  KinectWrapper.h  KinectWrapperLive.h  KinectWrapperPlayback.h  MKConfig.h  MKPComputeGoal.h  MKPPersonTracker.h  MKPPool.h  MKPRAprilTag.h  MKPRCornerDisplay.h  MKPRMergeBodyTracks.h  MKPRRecord.h  MKPRSaveFrame.h  MKPRSplitter.h  MKPRecipient.h  MultiKinectPacket.h  MultiKinectWrapper.h  Stopwatch.h
